objects/eventXL_ContactRegDemoes__x.object
<CustomObject>
    <description>eventXL_ContactRegDemoes</description>
    <externalDataSource>Hybrid_Data_Pipeline</externalDataSource>
    <externalName>eventXL_ContactRegDemoes</externalName>
    <fields>
        <fullName>ContactID__c</fullName>
        <description>ContactID</description>
        <externalDeveloperName>ContactID</externalDeveloperName>
        <label>ContactID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactRegDemoID__c</fullName>
        <description>ContactRegDemoID</description>
        <externalDeveloperName>ContactRegDemoID</externalDeveloperName>
        <label>ContactRegDemoID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCContactID</description>
        <externalDeveloperName>SFDCContactID</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>eventXL_ContactRegDemoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Registered__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCRegistrationID</description>
        <externalDeveloperName>SFDCRegistrationID</externalDeveloperName>
        <label>Event Registered</label>
        <referenceTo>Registration__c</referenceTo>
        <relationshipName>eventXL_ContactRegDemoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDCEventID</description>
        <externalDeveloperName>SFDCEventID</externalDeveloperName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>eventXL_ContactRegDemoes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>ExternalID</description>
        <externalDeveloperName>ExternalID</externalDeveloperName>
        <label>ExternalID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieldDetailID__c</fullName>
        <description>FieldDetailID</description>
        <externalDeveloperName>FieldDetailID</externalDeveloperName>
        <label>FieldDetailID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldPickID__c</fullName>
        <description>FieldPickID</description>
        <externalDeveloperName>FieldPickID</externalDeveloperName>
        <label>FieldPickID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <description>IsActive</description>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>IsActive</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>FieldName</description>
        <externalDeveloperName>FieldName</externalDeveloperName>
        <label>Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>ContactRegDemoQuestion</description>
        <externalDeveloperName>ContactRegDemoQuestion</externalDeveloperName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>ProductCode</description>
        <externalDeveloperName>ProductCode</externalDeveloperName>
        <label>ProductCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroupID__c</fullName>
        <description>ProductGroupID</description>
        <externalDeveloperName>ProductGroupID</externalDeveloperName>
        <label>ProductGroupID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <description>ProductID</description>
        <externalDeveloperName>ProductID</externalDeveloperName>
        <label>ProductID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationKey__c</fullName>
        <description>RegistrationKey</description>
        <externalDeveloperName>RegistrationKey</externalDeveloperName>
        <label>RegistrationKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceKey__c</fullName>
        <description>SourceKey</description>
        <externalDeveloperName>SourceKey</externalDeveloperName>
        <label>SourceKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>ContactRegDemoAnwser</description>
        <externalDeveloperName>ContactRegDemoAnwser</externalDeveloperName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Reg Demo</label>
    <pluralLabel>Contact Reg Demo</pluralLabel>
</CustomObject>